# whow

./: .gitignore  DEBUG_CHEATSHEET.md  README.md  pyproject.toml  pyrightconfig.json  test.py
res/: sample_category.toml  sample_config.toml  sample_event.toml  sample_index.toml  sample_todo.toml
whow/: __main__.py  base.py  colors.py  components.py  config.py  exceptions.py  todo.py  util.py
whow/colors/: __init__.py  colors.py  styles.py
whow/config/: __init__.py
whow/data_structures/: category.py  schedules.py  todos.py
whow/exceptions/: __init__.py
whow/res/: help.txt  sample_config.toml  sample_event.toml  sample_schedule.toml  sample_todo.toml  template.py
whow/util/: __init__.py
