[tool.poetry]
name = "whow"
version = "0.1.0"
description = "A simple CLI To-do program."
authors = [ "ezntek <ezntek@xflymusic.com>", "DaringCuteSeal <daringcuteseal@gmail.com>" ]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
